--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ header .navegacao .pesquisa {
         display: flex;
         justify-content: center;
         align-items: center;
+
 }
 
 header .navegacao .pesquisa input {
@@ -46,6 +47,7 @@ header .navegacao .pesquisa input {
 header .navegacao .pesquisa button {
         background: none;
 	border: none;
+        padding-left: 0.5em;
 }
 
 .buttons div {
@@ -62,7 +64,8 @@ header .navegacao .pesquisa button {
 }
 
 .logoc {
-        width: 60px;
+        width: 4.5em;
+        padding-left: 0.9em;
 }
 
 .logoa {
